:bug: fix description section mobile bug

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -11,6 +11,7 @@
   font-size:1rem;
   letter-spacing: 2px;
   opacity:0.9;
+  text-decoration: none !important;
 
   &:hover{
     opacity:1;
